# flecsirogue

./: Cargo.toml  flake.nix
.cargo/: config.toml
base/: Cargo.toml
base/src/: game.rs  lib.rs  persist.rs
base/src/util/: pos.rs  vec2f.rs
components/: Cargo.toml
components/src/: game.rs  lib.rs  persist.rs
components/src/util/: pos.rs
flecsirogue/: Cargo.toml
flecsirogue/src/: input.rs
graphic/: Cargo.toml
graphic/src/: lib.rs
main/: Cargo.toml
main/src/: camera.rs  game.rs  input.rs  main.rs  sprite.rs  tilemap.rs
main/src/util/: mod.rs
src/: camera.rs  game.rs  input.rs  main.rs  persist.rs  sprite.rs  tilemap.rs
src/util/: flecs_extension.rs  mod.rs  pos.rs  vec2f.rs
