[package]
name = "flecsirogue"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.18"
flecs_ecs = "0.1.2"
grids = { git = "https://github.com/kampffrosch94/grids", branch = "grid_math" }
macroquad = "0.4.11"
mapgen = "0.6.0"
tween = "2.0.3"
rand = "0.8.5"

# egui integration
egui-miniquad = {git = "https://github.com/kampffrosch94/egui-miniquad", branch = "miniquad_update"}
egui = "*"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 1
